going to add redux into the app

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,6 +4,8 @@ $search-text-width: 12.5rem;
 $search-background: #1e1e1e;
 $search-button-background: salmon;
 $body-background: #131313;
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap");
+
 *,
 *::after,
 *::before {
@@ -16,5 +18,5 @@ body {
   overflow-x: hidden;
   width: 100vw;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Maven Pro" !important;
 }
