--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   background-color: #ff424f;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
 }
 .nav {
   padding-top: 8.5rem;
@@ -15,6 +15,7 @@
   background-color: #191c1f;
   color: white;
   padding-left: 2.5rem !important;
+  z-index: 10;
 }
 .home {
   display: flex;
@@ -24,6 +25,7 @@
   width: 100vw;
   height: 250vh;
   background-color: #222b31;
+  position: relative;
 }
 .footer {
   position: absolute;
@@ -46,5 +48,30 @@
     justify-content: space-around;
     align-items: center;
     color: white;
+    letter-spacing: 0.5px;
+    font-size: 0.95rem;
   }
+}
+.home {
+  width: 100vw;
+  height: 100vh;
+}
+.gradient {
+  width: calc(100vw - 15rem);
+  height: 100vh;
+  background-image: linear-gradient(to top left, #a72f2ba4 0%, #291f1fbe 100%);
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+}
+
+.image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
