--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -45,7 +45,7 @@
   }
 }
 .search {
-  width: 14rem;
+  width: 16rem;
 
   background: white;
   border-radius: 200px;
@@ -72,7 +72,6 @@
     border-radius: 50%;
     height: $search-height;
     width: $search-height;
-    margin-right: 6px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,7 +95,9 @@
       display: flex;
       align-items: center;
       cursor: pointer;
-      letter-spacing: 1px;
+      font-size: 0.95rem;
+
+      letter-spacing: 1.3px;
       text-transform: capitalize;
     }
   }
@@ -116,6 +117,9 @@
     &__link {
       margin-bottom: 1.5rem;
       display: flex;
+      font-size: 0.95rem;
+
+      letter-spacing: 1.3px;
       align-items: center;
       letter-spacing: 1px;
       text-transform: capitalize;
@@ -154,6 +158,7 @@
   align-items: center;
   justify-content: space-evenly;
 }
+
 .up {
   cursor: pointer;
   font-size: 1.8rem;
