finished creating the home page now i am going to create a slider

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,7 +5,7 @@ $search-background: #1e1e1e;
 $search-button-background: salmon;
 $body-background: #131313;
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 *,
 *::after,
 *::before {
