--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -133,10 +133,10 @@
   }
 }
 .heart {
-  color: #ff424f;
+  fill: #ff424f;
 }
 .soon {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 .setting {
   font-size: 1.43rem;
@@ -162,4 +162,97 @@
 .up {
   cursor: pointer;
   font-size: 1.8rem;
+}
+
+.buttons-container {
+  color: white;
+  font-size: 2.5rem;
+  position: absolute;
+  top: 110px;
+  left: 30px;
+}
+.back {
+  fill: #f3f3f3;
+
+  margin-right: 0.9rem;
+  cursor: pointer;
+  z-index: 111;
+}
+.forward {
+  fill: #f3f3f3;
+  cursor: pointer;
+  z-index: 111;
+}
+.content {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 60px;
+  &__stats {
+    // color: #fd4450;
+    // font-size: 3.5rem;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.5px;
+    color: rgba(255, 255, 255, 0.808);
+  }
+  &__stats > * {
+    margin-right: 1rem;
+    display: flex;
+    align-items: center;
+  }
+  &__stats {
+  }
+  &__gist {
+    margin: 1rem 0;
+    margin-bottom: 2rem;
+    color: white;
+    line-height: 1.8;
+    width: 28rem;
+  }
+  &__title {
+    color: white;
+    font-size: 3.5rem;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+    letter-spacing: 5px;
+    font-family: "Poppins", sans-serif;
+  }
+  &__buttons {
+    button {
+      margin-right: 3rem;
+      border-radius: 70px;
+      outline: none;
+      border: none;
+      color: rgb(248, 57, 57);
+      text-transform: uppercase;
+      padding: 0.8rem 2rem;
+      font-size: 1.2rem;
+      letter-spacing: 1px;
+      svg {
+        font-size: 2rem;
+        // margin-bottom: 1px;
+      }
+    }
+    button:first-child {
+      border-radius: 70px;
+      outline: none;
+      border: none;
+      color: rgb(248, 57, 57);
+      padding: 0.8rem 2.5rem;
+    }
+  }
+}
+.stat {
+  font-size: 2rem;
+  fill: rgb(255, 171, 171);
+  margin-right: 5px;
+}
+.content__buttons_con {
+  display: flex;
+
+  align-items: center;
+}
+.add {
+  margin-left: 6px;
 }
