--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -166,7 +166,7 @@
 
 .buttons-container {
   color: white;
-  font-size: 2.5rem;
+  font-size: 3rem;
   position: absolute;
   top: 110px;
   left: 30px;
@@ -245,8 +245,8 @@
 }
 .stat {
   font-size: 2rem;
-  fill: rgb(255, 171, 171);
-  margin-right: 5px;
+  fill: rgb(255, 255, 255);
+  margin-right: 0.5rem;
 }
 .content__buttons_con {
   display: flex;
@@ -255,4 +255,13 @@
 }
 .add {
   margin-left: 6px;
+}
+.online {
+  width: 15px;
+  border-radius: 50%;
+  height: 15px;
+  background-color: rgb(11, 255, 11);
+  position: absolute;
+  bottom: 0px;
+  right: 2px;
 }
