--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -215,6 +215,7 @@
     font-size: 3.5rem;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    width: 45rem;
     letter-spacing: 5px;
     font-family: "Poppins", sans-serif;
   }
@@ -264,4 +265,45 @@
   position: absolute;
   bottom: 0px;
   right: 2px;
+}
+.slider {
+  display: flex;
+  width: auto;
+}
+.card-container {
+  margin-left: 4rem;
+}
+.card {
+  height: 13rem;
+  width: 15rem;
+  background-color: transparent !important;
+  &_image {
+    object-fit: cover;
+  }
+  &_rating {
+    height: 2rem;
+    width: 2rem;
+    background-color: rgb(228, 88, 88);
+    border-radius: 50%;
+    position: absolute;
+    top: -1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+  }
+  &_title {
+    margin-top: 0.8rem;
+    text-transform: capitalize;
+    margin-bottom: 0.3rem;
+    font-size: 1.2rem;
+  }
+  &_genres {
+    color: #a1cae5;
+  }
+}
+.first {
+  margin-bottom: 20rem;
 }
