--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -23,7 +23,7 @@
 }
 .landing {
   width: 100vw;
-  height: 250vh;
+  height: 450vh;
   background-color: #222b31;
   position: relative;
 }
@@ -35,8 +35,8 @@
     height: 200px;
     background-image: linear-gradient(
         to right,
-        rgba(95, 37, 37, 0.61),
-        rgba(100, 25, 25, 0.548)
+        rgba(95, 37, 37, 0.842),
+        rgba(100, 25, 25, 0.836)
       ),
       url(../assests/marvel.jpg);
   }
@@ -74,4 +74,16 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+.popular {
+  padding-left: 15rem;
+  width: calc(100vw - 15rem);
+  color: white;
+  &__title {
+    font-family: "Poppins", sans-serif;
+    letter-spacing: 3px;
+    margin-left: 4rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
 }
