--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -184,10 +184,12 @@
   z-index: 111;
 }
 .content {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 60px;
+  margin-top: 10rem;
+  margin-left: 5rem;
+  //   position: absolute;
+  //   top: 50%;
+  //   transform: translateY(-50%);
+  //   left: 60px;
   &__stats {
     // color: #fd4450;
     // font-size: 3.5rem;
@@ -249,6 +251,9 @@
   fill: rgb(255, 255, 255);
   margin-right: 0.5rem;
 }
+.margin-max {
+  padding-bottom: 20rem;
+}
 .content__buttons_con {
   display: flex;
 
@@ -266,10 +271,42 @@
   bottom: 0px;
   right: 2px;
 }
-.slider {
-  display: flex;
-  width: auto;
+// .slider-container {
+//   width: 85vw;
+//   overflow: hidden;
+//   position: relative;
+//   height: 32rem;
+//   left: 0;
+// }
+// .slider {
+//   height: 100%;
+//   width: 200%;
+//   display: flex;
+//   position: absolute;
+//   left: 0px;
+// }
+.slider-container {
+  width: 85vw;
+  height: 30rem;
+  position: relative;
+  cursor: pointer;
+  margin-top: 5%;
+  /* border: 2px solid violet; */
 }
+.slider {
+  width: 700%;
+  max-width: 220rem;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 0.5rem;
+  pointer-events: none;
+  /* border: 2px solid red; */
+}
+
 .card-container {
   margin-left: 4rem;
 }
@@ -292,7 +329,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   &_title {
     margin-top: 0.8rem;
@@ -306,4 +343,50 @@
 }
 .first {
   margin-bottom: 20rem;
+}
+.good {
+  background-color: rgb(71, 165, 16);
+}
+.slider-innerbox {
+  width: 80%;
+  max-width: 22rem;
+  height: 50%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin: 0 2rem;
+  border-radius: 0.3rem;
+  /* border: 2px solid lightgreen; */
+}
+
+.slider-img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  border-radius: 73% 4% 84% 5% / 2% 71% 4% 92%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+#imgone {
+  background: blue;
+}
+#imgtwo {
+  background: red;
+}
+#imgthree {
+  background: green;
+}
+#imgfour {
+  background: beige;
+}
+#imgfive {
+  background: lightblue;
+}
+#imgsix {
+  background: purple;
+}
+#imgseven {
+  background: crimson;
 }
