--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -184,8 +184,8 @@
   z-index: 111;
 }
 .content {
-  margin-top: 10rem;
-  margin-left: 5rem;
+  margin-top: 6rem;
+  margin-left: 3rem;
   //   position: absolute;
   //   top: 50%;
   //   transform: translateY(-50%);
@@ -209,8 +209,10 @@
     margin: 1rem 0;
     margin-bottom: 2rem;
     color: white;
-    line-height: 1.8;
+    line-height: 1.5;
     width: 28rem;
+    max-height: 6rem;
+    overflow: hidden;
   }
   &__title {
     color: white;
@@ -220,6 +222,8 @@
     width: 45rem;
     letter-spacing: 5px;
     font-family: "Poppins", sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
   }
   &__buttons {
     button {
@@ -296,7 +300,7 @@
 .slider {
   width: 700%;
   max-width: 220rem;
-  height: 100%;
+  height: 90%;
   position: absolute;
   left: 0;
   top: 0;
@@ -309,10 +313,12 @@
 
 .card-container {
   margin-left: 4rem;
+  height: 8rem;
 }
 .card {
-  height: 13rem;
+  height: 8rem;
   width: 15rem;
+  cursor: pointer !important;
   background-color: transparent !important;
   &_image {
     object-fit: cover;
