--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -24,7 +24,6 @@ body {
   align-items: center;
   padding: 0.5rem 0;
 }
-
 .container-logo__logo {
   height: 80px;
   width: 120px;
@@ -37,11 +36,9 @@ body {
   width: 100%;
   position: relative;
 }
-
 .rest-container .search {
   margin-left: 3rem;
 }
-
 .rest-container .user {
   text-transform: capitalize;
   align-items: center;
@@ -53,7 +50,6 @@ body {
   color: white;
   font-size: 1.2rem;
 }
-
 .rest-container .icon {
   height: 50px;
   width: 50px;
@@ -76,11 +72,9 @@ body {
   align-items: center;
   transition: all 0.75s ease-in-out;
 }
-
 .search__icon {
   font-size: 1.4rem;
 }
-
 .search__text {
   border: 0;
   margin-left: 1rem;
@@ -92,7 +86,6 @@ body {
   transition: all 0.5s ease-in-out;
   font-size: 1rem;
 }
-
 .search__button {
   border-radius: 50%;
   height: 2.5rem;
@@ -113,11 +106,9 @@ body {
   color: rgba(255, 255, 255, 0.671);
   font-size: 0.9rem;
 }
-
 .menu-nav {
   padding: 0px;
 }
-
 .menu-nav__link {
   margin-bottom: 1.5rem;
   display: flex;
@@ -127,7 +118,6 @@ body {
   letter-spacing: 1.3px;
   text-transform: capitalize;
 }
-
 .menu__icon {
   font-size: 1.5rem;
   margin-right: 1rem;
@@ -139,11 +129,9 @@ body {
   font-size: 0.9rem;
   margin-bottom: 1.5rem;
 }
-
 .general-nav {
   padding: 0px;
 }
-
 .general-nav__link {
   margin-bottom: 1.5rem;
   display: flex;
@@ -155,7 +143,6 @@ body {
   cursor: pointer;
   justify-content: flex-start;
 }
-
 .general__icon {
   margin-right: 1rem;
   font-size: 1.5rem;
@@ -219,31 +206,29 @@ body {
 }
 
 .content {
-  margin-top: 10rem;
-  margin-left: 5rem;
+  margin-top: 6rem;
+  margin-left: 3rem;
 }
-
 .content__stats {
   display: flex;
   align-items: center;
   letter-spacing: 0.5px;
   color: rgba(255, 255, 255, 0.808);
 }
-
 .content__stats > * {
   margin-right: 1rem;
   display: flex;
   align-items: center;
 }
-
 .content__gist {
   margin: 1rem 0;
   margin-bottom: 2rem;
   color: white;
-  line-height: 1.8;
+  line-height: 1.5;
   width: 28rem;
+  max-height: 6rem;
+  overflow: hidden;
 }
-
 .content__title {
   color: white;
   font-size: 3.5rem;
@@ -252,8 +237,9 @@ body {
   width: 45rem;
   letter-spacing: 5px;
   font-family: "Poppins", sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
 }
-
 .content__buttons button {
   margin-right: 3rem;
   border-radius: 70px;
@@ -265,11 +251,9 @@ body {
   font-size: 1.2rem;
   letter-spacing: 1px;
 }
-
 .content__buttons button svg {
   font-size: 2rem;
 }
-
 .content__buttons button:first-child {
   border-radius: 70px;
   outline: none;
@@ -319,7 +303,7 @@ body {
 .slider {
   width: 700%;
   max-width: 220rem;
-  height: 100%;
+  height: 90%;
   position: absolute;
   left: 0;
   top: 0;
@@ -332,18 +316,18 @@ body {
 
 .card-container {
   margin-left: 4rem;
+  height: 8rem;
 }
 
 .card {
-  height: 13rem;
+  height: 8rem;
   width: 15rem;
+  cursor: pointer !important;
   background-color: transparent !important;
 }
-
 .card_image {
   object-fit: cover;
 }
-
 .card_rating {
   height: 2rem;
   width: 2rem;
@@ -358,14 +342,12 @@ body {
   align-items: center;
   font-size: 0.8rem;
 }
-
 .card_title {
   margin-top: 0.8rem;
   text-transform: capitalize;
   margin-bottom: 0.3rem;
   font-size: 1.2rem;
 }
-
 .card_genres {
   color: #a1cae5;
 }
@@ -423,7 +405,6 @@ body {
     transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
   }
 }
-
 @keyframes rotate-two {
   0% {
     transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
@@ -432,7 +413,6 @@ body {
     transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
   }
 }
-
 @keyframes rotate-three {
   0% {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
@@ -441,7 +421,6 @@ body {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
-
 .body {
   height: 100vh;
   width: 100vw;
@@ -493,12 +472,10 @@ body {
   bottom: 0rem;
   right: 0;
 }
-
 .footer__image {
   height: 200px;
   background-image: linear-gradient(to right, rgba(95, 37, 37, 0.842), rgba(100, 25, 25, 0.836)), url(../assests/marvel.jpg);
 }
-
 .footer__copy {
   padding: 0.8rem 0;
   width: calc(100vw - 15rem);
@@ -513,6 +490,7 @@ body {
 
 .home {
   width: 100vw;
+  user-select: none;
 }
 
 .gradient {
@@ -531,6 +509,7 @@ body {
   height: 100vh;
   object-position: right;
   position: absolute;
+  padding-top: 96px;
   top: 0;
   left: 0;
 }
@@ -540,12 +519,10 @@ body {
   width: calc(100vw - 15rem);
   color: white;
 }
-
 .popular__title {
   font-family: "Poppins", sans-serif;
   letter-spacing: 3px;
   margin-left: 4rem;
   margin-top: 4rem;
   margin-bottom: 4rem;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
