--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -184,6 +184,8 @@
   z-index: 111;
 }
 .content {
+  opacity: 0;
+  transform: translateY(20px);
   margin-top: 6rem;
   margin-left: 3rem;
   //   position: absolute;
@@ -293,7 +295,6 @@
   width: 85vw;
   height: 30rem;
   position: relative;
-  cursor: pointer;
   margin-top: 5%;
   /* border: 2px solid violet; */
 }
@@ -307,7 +308,6 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   gap: 0.5rem;
-  pointer-events: none;
   /* border: 2px solid red; */
 }
 
@@ -322,6 +322,7 @@
   background-color: transparent !important;
   &_image {
     object-fit: cover;
+    cursor: pointer;
   }
   &_rating {
     height: 2rem;
