--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
-@import '_base';
-@import '_component';
-@import '_layout';
+@import "_base";
+@import "_component";
+@import "_layout";
+@import "./pages";
