--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -133,7 +133,7 @@
   }
 }
 .heart {
-  fill: #ff424f;
+  fill: rgb(255, 0, 0);
 }
 .soon {
   font-size: 1.5rem;
@@ -267,6 +267,7 @@
 }
 .add {
   margin-left: 6px;
+  font-size: 1rem;
 }
 .online {
   width: 15px;
@@ -293,7 +294,7 @@
 // }
 .slider-container {
   width: 85vw;
-  height: 30rem;
+  height: 20rem;
   position: relative;
   margin-top: 5%;
 }
@@ -305,20 +306,22 @@
   left: 0;
   top: 0;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  gap: 0.5rem;
+  grid-template-columns: repeat(10, 10rem);
   border: none;
+  grid-gap: 4.3rem;
   outline: none;
 }
 
 .card-container {
   margin-left: 3rem;
   margin-bottom: 3rem;
+  width: 10rem;
 }
 .none {
   text-decoration: none;
   color: currentColor;
   border: 0;
+  min-height: 160px;
   &:hover {
     color: currentColor;
   }
@@ -329,12 +332,13 @@
   outline: none;
   cursor: pointer !important;
   background-color: transparent !important;
+
   &_image {
     cursor: pointer;
     border-radius: 5px;
     outline: none;
     width: 10rem;
-    height: auto;
+    object-fit: cover;
   }
   &_rating {
     height: 2rem;
