--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -149,7 +149,7 @@ body {
 }
 
 .heart {
-  fill: #ff424f;
+  fill: red;
 }
 
 .soon {
@@ -281,6 +281,7 @@ body {
 
 .add {
   margin-left: 6px;
+  font-size: 1rem;
 }
 
 .online {
@@ -295,7 +296,7 @@ body {
 
 .slider-container {
   width: 85vw;
-  height: 30rem;
+  height: 20rem;
   position: relative;
   margin-top: 5%;
 }
@@ -308,21 +309,23 @@ body {
   left: 0;
   top: 0;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  gap: 0.5rem;
+  grid-template-columns: repeat(10, 10rem);
   border: none;
+  grid-gap: 4.3rem;
   outline: none;
 }
 
 .card-container {
   margin-left: 3rem;
   margin-bottom: 3rem;
+  width: 10rem;
 }
 
 .none {
   text-decoration: none;
   color: currentColor;
   border: 0;
+  min-height: 160px;
 }
 .none:hover {
   color: currentColor;
@@ -340,7 +343,7 @@ body {
   border-radius: 5px;
   outline: none;
   width: 10rem;
-  height: auto;
+  object-fit: cover;
 }
 .card_rating {
   height: 2rem;
@@ -555,6 +558,128 @@ body {
   margin-top: 96px;
   width: calc(100vw - 15rem);
   color: white;
+  height: auto;
+}
+
+.movie .margin-bottom {
+  margin-bottom: 2rem;
+}
+
+.movie .link-height {
+  height: 120px;
+}
+
+.movie .cast {
+  margin-top: 1rem;
+}
+
+.movie .casting {
+  margin-left: 3rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+}
+
+.movie .column {
+  display: flex;
+  flex-direction: column;
+}
+
+.movie .actor-item {
+  display: flex;
+  align-items: center;
+  margin: 2rem 0;
+  width: 300px;
+  height: 100px;
+}
+
+.movie .actor-item .actor__image {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+  object-fit: cover;
+}
+
+.movie .image_container {
+  position: relative;
+  width: calc(100vw - 15rem);
+  height: 450px;
+}
+
+.movie__image {
+  width: calc(100vw - 15rem);
+  height: 450px;
+  object-fit: fill;
+}
+
+.movie .image_gradient {
+  position: absolute;
+  top: 0;
+  z-index: 10;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.37), #1e1e1e8e, #1e1e1e);
+}
+
+.movie .similar-movies {
+  margin-left: 3rem;
+  text-transform: capitalize;
+  margin-bottom: 0;
+  margin-top: 1rem;
+}
+
+.movie .content_container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.movie .content_container .movie__poster-image {
+  height: 400px;
+  margin-right: 3rem;
+}
+
+.movie .content_container .content_details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 40%;
+}
+
+.movie .content_container .content_details .movie__description {
+  width: 100%;
+  color: #b4b4b4;
+}
+
+.movie .content_container .content_details .movie__name {
+  font-size: 2.3rem;
+}
+
+.movie .content_container .content_details .movie__genres {
+  display: flex;
+  margin-bottom: 1.2rem;
+  margin-top: 0.5rem;
+}
+
+.movie .content_container .content_details .movie__genres .genre {
+  margin-right: 1rem;
+  background-color: #414141;
+  padding: 0.5rem 0.6rem;
+  border-radius: 5px;
+}
+
+.movie .content_container .content_details .movie__rating {
+  margin: 0.7rem 0;
+}
+
+.movie .content_container .content_details .btn-play,
+.movie .content_container .content_details .btn-add {
+  padding: 0.7rem 2rem;
+  background-color: #414141;
+  color: white;
 }
 
 .actor {
@@ -563,6 +688,42 @@ body {
   margin-top: 96px;
   width: calc(100vw - 15rem);
   color: white;
+  display: flex;
+  min-height: 100vh;
+  align-items: flex-start;
+  padding-top: 100px;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.actor .known-for {
+  margin-top: 1rem;
+  text-transform: capitalize;
+  padding-left: 3rem;
+}
+
+.actor__namee {
+  margin-bottom: 1.5rem;
+}
+
+.actor__profile {
+  height: 400px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-right: 3rem;
+}
+
+.actor__description {
+  width: 120%;
+}
+
+.actor .flex {
+  display: flex;
+  padding-left: 3rem;
+}
+
+.actor .actor-details {
+  width: 50%;
 }
 
 .search-con {
@@ -575,7 +736,13 @@ body {
   position: relative;
 }
 
+.search-con .search-title {
+  margin-left: 3rem;
+  margin-top: 1rem;
+}
+
 .search-con .search-results {
+  margin-top: 3rem;
   display: flex;
   flex-wrap: wrap;
 }
@@ -586,4 +753,50 @@ body {
   background-color: #323033;
   position: fixed;
   top: 0;
+}
+
+.search-con .center {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  padding-bottom: 3rem;
+}
+
+.search-con .center .button {
+  cursor: pointer;
+}
+
+.search-con .center .button:first-child {
+  margin-right: 1rem;
+}
+
+.search-con .next {
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.watchlist {
+  background-color: #1e1e1e;
+  margin-left: 15rem;
+  padding-right: 3rem;
+  margin-top: 96px;
+  min-height: 100vh;
+  width: calc(100vw - 15rem);
+  padding-left: 3rem;
+  color: white;
+}
+
+.watchlist h1 {
+  margin-top: 1rem;
+}
+
+.watchlist .watchlist-conatainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-div {
+  margin: 0;
+  padding: 0;
+  min-height: 160px;
 }/*# sourceMappingURL=main.css.map */
