--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -6,7 +6,12 @@
   width: calc(100vw - 15rem);
   color: white;
   position: relative;
+  .search-title {
+    margin-left: 3rem;
+    margin-top: 1rem;
+  }
   .search-results {
+    margin-top: 3rem;
     display: flex;
     flex-wrap: wrap;
   }
@@ -16,5 +21,21 @@
     background-color: rgb(50, 48, 51);
     position: fixed;
     top: 0;
+  }
+  .center {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 3rem;
+    .button {
+      cursor: pointer;
+    }
+    .button:first-child {
+      margin-right: 1rem;
+    }
+  }
+  .next {
+    margin-left: 1rem;
+    cursor: pointer;
   }
 }
