--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -299,6 +299,7 @@ body {
   height: 20rem;
   position: relative;
   margin-top: 5%;
+  overflow: hidden;
 }
 
 .slider {
@@ -306,13 +307,14 @@ body {
   max-width: 220rem;
   height: 90%;
   position: absolute;
-  left: 0;
+  left: -100px;
   top: 0;
   display: grid;
   grid-template-columns: repeat(10, 10rem);
   border: none;
   grid-gap: 4.3rem;
   outline: none;
+  z-index: 111111;
 }
 
 .card-container {
@@ -325,7 +327,6 @@ body {
   text-decoration: none;
   color: currentColor;
   border: 0;
-  min-height: 160px;
 }
 .none:hover {
   color: currentColor;
@@ -339,7 +340,6 @@ body {
   background-color: transparent !important;
 }
 .card_image {
-  cursor: pointer;
   border-radius: 5px;
   outline: none;
   width: 10rem;
@@ -370,6 +370,8 @@ body {
 }
 .card_genres {
   color: #a1cae5;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .first {
@@ -566,7 +568,7 @@ body {
 }
 
 .movie .link-height {
-  height: 120px;
+  height: 100px;
 }
 
 .movie .cast {
@@ -691,9 +693,14 @@ body {
   display: flex;
   min-height: 100vh;
   align-items: flex-start;
+  height: auto;
   padding-top: 100px;
   justify-content: center;
   flex-direction: column;
+}
+
+.actor .margin-bottom {
+  margin-bottom: 2rem;
 }
 
 .actor .known-for {
@@ -778,21 +785,21 @@ body {
 .watchlist {
   background-color: #1e1e1e;
   margin-left: 15rem;
-  padding-right: 3rem;
   margin-top: 96px;
   min-height: 100vh;
   width: calc(100vw - 15rem);
-  padding-left: 3rem;
   color: white;
 }
 
 .watchlist h1 {
   margin-top: 1rem;
+  padding-left: 3rem;
 }
 
 .watchlist .watchlist-conatainer {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 2rem;
 }
 
 .card-div {
