--- a/src/sass/pages/_actor.scss
+++ b/src/sass/pages/_actor.scss
@@ -7,9 +7,13 @@
   display: flex;
   min-height: 100vh;
   align-items: flex-start;
+  height: auto;
   padding-top: 100px;
   justify-content: center;
   flex-direction: column;
+  .margin-bottom {
+    margin-bottom: 2rem;
+  }
   .known-for {
     margin-top: 1rem;
     text-transform: capitalize;
