--- a/src/sass/pages/_watchlist.scss
+++ b/src/sass/pages/_watchlist.scss
@@ -1,17 +1,17 @@
 .watchlist {
   background-color: #1e1e1e;
   margin-left: 15rem;
-  padding-right: 3rem;
   margin-top: 96px;
   min-height: 100vh;
   width: calc(100vw - 15rem);
-  padding-left: 3rem;
   color: white;
   h1 {
     margin-top: 1rem;
+    padding-left: 3rem;
   }
   .watchlist-conatainer {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 2rem;
   }
 }
