--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -141,23 +141,6 @@
 .setting {
   font-size: 1.43rem;
 }
-.challenges-container {
-  left: 50%;
-  bottom: 3rem;
-  transform: translateX(-50%);
-  position: absolute;
-}
-.challenges {
-  border-radius: 15px;
-  padding: 2rem;
-  background-color: #ff424fe0;
-  height: auto;
-  width: 12rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
 
 .up {
   cursor: pointer;
@@ -297,7 +280,8 @@
   height: 20rem;
   position: relative;
   margin-top: 5%;
-  overflow: hidden;
+  overflow-x: hidden;
+  margin-left:3rem
 }
 .slider {
   width: 700%;
@@ -311,11 +295,9 @@
   border: none;
   grid-gap: 4.3rem;
   outline: none;
-  z-index: 111111;
 }
 
 .card-container {
-  margin-left: 3rem;
   margin-bottom: 3rem;
   width: 10rem;
 }
