--- a/src/sass/pages/_movie.scss
+++ b/src/sass/pages/_movie.scss
@@ -29,9 +29,10 @@
   .actor-item {
     display: flex;
     align-items: center;
-    margin: 2rem 0;
+    margin: 2rem 1rem;
     width: 300px;
     height: 100px;
+
     .actor__image {
       height: 80px;
       width: 80px;
@@ -68,7 +69,7 @@
     margin-left: 3rem;
     text-transform: capitalize;
     margin-bottom: 0;
-    margin-top: 1rem;
+    margin-top: 5rem;
   }
 
   .content_container {
