--- a/src/sass/_component.scss
+++ b/src/sass/_component.scss
@@ -195,6 +195,7 @@
     margin-bottom: 2rem;
     color: white;
     line-height: 1.5;
+    font-size: 1rem;
     width: 28rem;
     max-height: 8rem;
     overflow: hidden;
@@ -349,6 +350,7 @@
   &_genres {
     color: #a1cae5;
     white-space: nowrap;
+    font-size: 1rem;
     overflow: hidden;
   }
 }
