--- a/src/sass/pages/_search.scss
+++ b/src/sass/pages/_search.scss
@@ -25,6 +25,7 @@
   .center {
     display: flex;
     width: 100%;
+    font-size: 1rem;
     justify-content: center;
     padding-bottom: 3rem;
     .button {
